fix: add overflow for firefox on instructions panel

--- a/packages/learn/src/templates/Challenges/classic/classic.css
+++ b/packages/learn/src/templates/Challenges/classic/classic.css
@@ -8,7 +8,7 @@
 
 .instructions-panel {
   padding: 0 10px;
-  height: 100%;
+  height: calc(100vh - 38px);
   overflow-x: hidden;
   overflow-y: auto;
 }
